--- a/index.html
+++ b/index.html
@@ -16,7 +16,19 @@
 
 <body>
 <!-- for first push--> 
-  
+<div class="mycontainer">
+  <header>
+    <div class="navdiv">
+      <h1>Fun Bus</h1>
+    <nav>
+    <a href=#>Home</a>
+    <a href="#">About Us</a>
+    <a href="#">Blog</a>
+    <a href="#">Contact</a>
+  </nav>
+  </div> <!-- navdiv ends-->
+  <img class="funbus" src="img/fun-bus.jpg" alt="Fun Bus">
+  </header>
      
   <div class="container home">
    
@@ -25,7 +37,7 @@
         <h2>Let's Go!</h2>
         <p>Adventure webdesign pretty design design, excursion cute WordPress blogger design webdesign adventure. Pretty simple traveling fun WordPress wanderlust darn simple organized.</p> 
         <p>Expedition colorful design simple excursion blogger blogger design WordPress design, design organized website theme.</p>
-      </div>
+      </div> <!--text-content ends-->
       <div class="img-content">
         <img src="img/adventure.jpg" alt="Let's go on an adventure!">
       </div>
@@ -61,14 +73,14 @@
       <div class="destination">
         <h4>Island Getaway</h4>
         <p>Expedition excursion design excursion fun, clean simple organized WordPress Travel colorful webdesign. Traveler blogger website design expedition clean excursion traveling.</p>
-        <div class="btn">Sign Me Up!</div>
+        <div class="btn">Sign Me Up!</div> <!--btn div ends-->
       </div>
     </section>
-  </div><!-- container -->
+  </div><!-- container home ends-->
 
   <footer class="footer">
     <p>Copyright Fun Bus 2018</p>
   </footer>
-
+</div> <!--mycontainer div ends-->
 </body>
 </html>
