--- a/index.html
+++ b/index.html
@@ -31,6 +31,18 @@
   </header>
      
   <div class="container home">
+
+<!--my sections starts here-->
+<section>
+  <div>
+    <h2>Welcome To Fun Bus!</h2>
+    <p>
+      Traveling expedition modern, clean webdesign blogger clean website theme website modern. Despite pretty design, travel blogger adventure WordPress wanderlust theme blogger website expedition theme travelblogger. Adventure fun traveler pretty design website expedition. 
+    </p>
+
+  </div>
+</section> <!--my section ends-->
+
    
     <section class="content-section">
       <div class="text-content">
@@ -63,17 +75,25 @@
       <div class="destination">
         <h4>Fun In The Sun</h4>
         <p>Expedition excursion design excursion fun, clean simple organized WordPress Travel colorful webdesign. Traveler blogger website design expedition clean excursion traveling.</p>
-        <div class="btn">Sign Me Up!</div>
+        <div class="btn">
+          
+          <button>Sign Me Up! </button>
+
+          </div>
       </div>
       <div class="destination">
         <h4>Mountain Excursion</h4>
         <p>Expedition excursion design excursion fun, clean simple organized WordPress Travel colorful webdesign. Traveler blogger website design expedition clean excursion traveling.</p>
-        <div class="btn">Sign Me Up!</div>
+        <div class="btn">
+        <button>  Sign Me Up! </button>
+        </div>
       </div>
       <div class="destination">
         <h4>Island Getaway</h4>
         <p>Expedition excursion design excursion fun, clean simple organized WordPress Travel colorful webdesign. Traveler blogger website design expedition clean excursion traveling.</p>
-        <div class="btn">Sign Me Up!</div> <!--btn div ends-->
+        <div class="btn">
+         <button> Sign Me Up! </button>
+        </div> <!--btn div ends-->
       </div>
     </section>
   </div><!-- container home ends-->
