--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <header>
     <div class="navdiv">
       <h1>Fun Bus</h1>
-    <nav>
+    <nav class="putrow">
     <a href=#>Home</a>
     <a href="#">About Us</a>
     <a href="#">Blog</a>
